[package]
name = "bitcoin_address_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.27.1"
rand = "0.8.4"
secp256k1 = {version = "0.20.3", features = ["rand"]}
rust-crypto = "0.2.36"
itertools = "0.10.3"
base58 = "0.2.0"
bitcoincore-rpc = "0.14.0"
bitcoincore-rpc-json = "0.14.0"